Create a variable gangs for grouping By reuse
